--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -22,6 +22,6 @@ jobs:
         # Устанавливаем зависимости
         run: pip install -r requirements.txt
       - name: Run tests
-        run: coverage run src/tests.py
+        run: coverage run _test.py
       - name: Tests report
         run: coverage report
