--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,3 +24,13 @@ jobs:
       
     - name: Push image to Docker
       run: docker push $LOGIN/$NAME:${GITHUB_REF:11}
+      
+  redeploy:
+    runs-on: [ubuntu-latest]
+    needs: [build]
+    steps:
+      - name: Deploy docker container webhook
+        uses: joelwmale/webhook-action@master
+        env:
+          WEBHOOK_URL: ${{ secrets.WEBHOOK_URL  }}
+          data: "{ '0': '0'}"
