--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,10 +20,10 @@ jobs:
       run:  echo ${{ secrets.DOCKER_PWD }} | docker login -u ${{ secrets.DOCKER_LOGIN }} --password-stdin
     
     - name: Build the Docker image
-      run: docker build -t $LOGIN/$NAME:${GITHUB_REF:11} -f Dockerfile .
+      run: docker build -t $LOGIN/$NAME -f Dockerfile .
       
     - name: Push image to Docker
-      run: docker push $LOGIN/$NAME:${GITHUB_REF:11}
+      run: docker push $LOGIN/$NAME
       
   redeploy:
     runs-on: [ubuntu-latest]
